--- a/Portafolios.html
+++ b/Portafolios.html
@@ -9,6 +9,13 @@
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
 .w3-third img:hover{opacity: 1}
+.project-images img {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
@@ -91,7 +98,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
   <!-- Próximos Proyectos section -->
   <div class="w3-container w3-padding-64 w3-light-grey w3-center" id="proximos-proyectos">
-    <h3><b>Próximos Proyectos</b></h3>
+    <h3><b>Proyectos</b></h3>
     <div class="w3-content w3-justify" style="max-width:600px">
 
       <div class="w3-card w3-white w3-margin w3-padding">
@@ -101,27 +108,51 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
 
       <div class="w3-card w3-white w3-margin w3-padding">
-        <h4><b>Proyecto 2:</b></h4>
-        <p>Pendiente.</p>
-        <p><i>Fecha estimada: Próximamente</i></p>
+        <h4><b>Proyecto 2: TODO List</b></h4>
+        <div class="project-images">
+          <img src="Notas1.jpg" alt="Notas 1">
+          <img src="Notas2.jpg" alt="Notas 2">
+          <img src="Notas3.jpg" alt="Notas 3">
+          <img src="Notas4.jpg" alt="Notas 4">
+          <img src="Notas5.jpg" alt="Notas 5">
+          <img src="Notas6.jpg" alt="Notas 6">
+          <img src="Notas7.jpg" alt="Notas 7">
+          <img src="Notas8.jpg" alt="Notas 8">
+        </div>
+        <p>Una app en la que puedes añadir tareas, eliminarlas, marcarlas como hechas y editarlas.</p>
+        <p><i>Fecha inicio: 30/09/2024 - Fecha fin: 25/10/2024</i></p>
       </div>
 
       <div class="w3-card w3-white w3-margin w3-padding">
-        <h4><b>Proyecto 3:</b></h4>
+        <h4><b>Proyecto 3: Lista de la compra</b></h4>
         <p>Pendiente.</p>
-        <p><i>Fecha estimada: Próximamente</i></p>
+        <p><i>Fecha inicio: 28/10/2024 - Fecha fin: 29/11/2024</i></p>
       </div>
 
       <div class="w3-card w3-white w3-margin w3-padding">
-        <h4><b>Proyecto 4:</b></h4>
-        <p>Pendiente.</p>
-        <p><i>Fecha estimada: Próximamente</i></p>
+        <h4><b>Proyecto 4: App del tiempo</b></h4>
+        <div class="project-images">
+          <img src="Temps1.jpg" alt="Temps 1">
+          <img src="Temps2.jpg" alt="Temps 2">
+          <img src="Temps3.jpg" alt="Temps 3">
+          <img src="Temps4.jpg" alt="Temps 4">
+        </div>
+        <p>App que te muestra el clima y la temperatura de tu ciudad o de la ciudad que prefieras.</p>
+        <p><i>Fecha inicio: 02/12/2024 - Fecha fin: 10/01/2025</i></p>
       </div>
 
       <div class="w3-card w3-white w3-margin w3-padding">
-        <h4><b>Proyecto 5:</b></h4>
-        <p>Pendiente.</p>
-        <p><i>Fecha estimada: Próximamente</i></p>
+        <h4><b>Proyecto 5: App productos alimentarios</b></h4>
+        <div class="project-images">
+          <img src="Nutri1.jpg" alt="Nutri 1">
+          <img src="Nutri2.jpg" alt="Nutri 2">
+          <img src="Nutri3.jpg" alt="Nutri 3">
+          <img src="Nutri4.jpg" alt="Nutri 4">
+          <img src="Nutri5.jpg" alt="Nutri 5">
+          <img src="Nutri6.jpg" alt="Nutri 6">
+        </div>
+        <p>App para escanear o escribir los códigos de barras de los productos alimentarios y obtener la información nutricional de estos productos.</p>
+        <p><i>Fecha inicio: 13/01/2025 - Fecha fin: 07/02/2025</i></p>
       </div>
 
     </div>
@@ -177,6 +208,9 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 </script>
+
+</body>
+</html>
 
 </body>
 </html>
