--- a/Portafolios.html
+++ b/Portafolios.html
@@ -110,14 +110,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 2: TODO List</b></h4>
         <div class="project-images">
-          <img src="Notas1.jpg" alt="Notas 1">
-          <img src="Notas2.jpg" alt="Notas 2">
-          <img src="Notas3.jpg" alt="Notas 3">
-          <img src="Notas4.jpg" alt="Notas 4">
-          <img src="Notas5.jpg" alt="Notas 5">
-          <img src="Notas6.jpg" alt="Notas 6">
-          <img src="Notas7.jpg" alt="Notas 7">
-          <img src="Notas8.jpg" alt="Notas 8">
+          <img src="Notas1.jpeg" alt="Notas 1">
+          <img src="Notas2.jpeg" alt="Notas 2">
+          <img src="Notas3.jpeg" alt="Notas 3">
+          <img src="Notas4.jpeg" alt="Notas 4">
+          <img src="Notas5.jpeg" alt="Notas 5">
+          <img src="Notas6.jpeg" alt="Notas 6">
+          <img src="Notas7.jpeg" alt="Notas 7">
+          <img src="Notas8.jpeg" alt="Notas 8">
         </div>
         <p>Una app en la que puedes añadir tareas, eliminarlas, marcarlas como hechas y editarlas.</p>
         <p><i>Fecha inicio: 30/09/2024 - Fecha fin: 25/10/2024</i></p>
@@ -132,10 +132,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 4: App del tiempo</b></h4>
         <div class="project-images">
-          <img src="Temps1.jpg" alt="Temps 1">
-          <img src="Temps2.jpg" alt="Temps 2">
-          <img src="Temps3.jpg" alt="Temps 3">
-          <img src="Temps4.jpg" alt="Temps 4">
+          <img src="Temps1.jpeg" alt="Temps 1">
+          <img src="Temps2.jpeg" alt="Temps 2">
+          <img src="Temps3.jpeg" alt="Temps 3">
+          <img src="Temps4.jpeg" alt="Temps 4">
         </div>
         <p>App que te muestra el clima y la temperatura de tu ciudad o de la ciudad que prefieras.</p>
         <p><i>Fecha inicio: 02/12/2024 - Fecha fin: 10/01/2025</i></p>
@@ -144,12 +144,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 5: App productos alimentarios</b></h4>
         <div class="project-images">
-          <img src="Nutri1.jpg" alt="Nutri 1">
-          <img src="Nutri2.jpg" alt="Nutri 2">
-          <img src="Nutri3.jpg" alt="Nutri 3">
-          <img src="Nutri4.jpg" alt="Nutri 4">
-          <img src="Nutri5.jpg" alt="Nutri 5">
-          <img src="Nutri6.jpg" alt="Nutri 6">
+          <img src="Nutri1.jpeg" alt="Nutri 1">
+          <img src="Nutri2.jpeg" alt="Nutri 2">
+          <img src="Nutri3.jpeg" alt="Nutri 3">
+          <img src="Nutri4.jpeg" alt="Nutri 4">
+          <img src="Nutri5.jpeg" alt="Nutri 5">
+          <img src="Nutri6.jpeg" alt="Nutri 6">
         </div>
         <p>App para escanear o escribir los códigos de barras de los productos alimentarios y obtener la información nutricional de estos productos.</p>
         <p><i>Fecha inicio: 13/01/2025 - Fecha fin: 07/02/2025</i></p>
