--- a/Portafolios.html
+++ b/Portafolios.html
@@ -6,18 +6,60 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-.w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
-.w3-third img:hover{opacity: 1}
-.project-images img {
-  width: 100%;
-  max-width: 600px;
-  height: auto;
-  margin-bottom: 10px;
-  border-radius: 8px;
-}
-</style>
+    body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    .w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
+    .w3-third img:hover{opacity: 1}
+    .project-images {
+      display: flex;
+      gap: 8px;
+      overflow-x: auto;
+      padding: 10px 0;
+      margin-bottom: 15px;
+    }
+    .project-images img {
+      width: 150px;
+      height: auto;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .project-images img:hover {
+      transform: scale(1.05);
+    }
+    /* Estilos para el modal */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      padding-top: 50px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.9);
+    }
+    .modal-content {
+      margin: auto;
+      display: block;
+      max-width: 90%;
+      max-height: 90%;
+    }
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
+
+    <div id="imageModal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img class="modal-content" id="expandedImg">
+      </div>
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
@@ -110,14 +152,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 2: TODO List</b></h4>
         <div class="project-images">
-          <img src="Notas1.jpeg" alt="Notas 1">
-          <img src="Notas2.jpeg" alt="Notas 2">
-          <img src="Notas3.jpeg" alt="Notas 3">
-          <img src="Notas4.jpeg" alt="Notas 4">
-          <img src="Notas5.jpeg" alt="Notas 5">
-          <img src="Notas6.jpeg" alt="Notas 6">
-          <img src="Notas7.jpeg" alt="Notas 7">
-          <img src="Notas8.jpeg" alt="Notas 8">
+          <img src="Notas1.jpeg" alt="Notas 1" onclick="openModal(this)">
+          <img src="Notas2.jpeg" alt="Notas 2" onclick="openModal(this)">
+          <img src="Notas3.jpeg" alt="Notas 3" onclick="openModal(this)">
+          <img src="Notas4.jpeg" alt="Notas 4" onclick="openModal(this)">
+          <img src="Notas5.jpeg" alt="Notas 5" onclick="openModal(this)">
+          <img src="Notas6.jpeg" alt="Notas 6" onclick="openModal(this)">
+          <img src="Notas7.jpeg" alt="Notas 7" onclick="openModal(this)">
+          <img src="Notas8.jpeg" alt="Notas 8" onclick="openModal(this)">
         </div>
         <p>Una app en la que puedes añadir tareas, eliminarlas, marcarlas como hechas y editarlas.</p>
         <p><i>Fecha inicio: 30/09/2024 - Fecha fin: 25/10/2024</i></p>
@@ -131,12 +173,14 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 4: App del tiempo</b></h4>
-        <div class="project-images">
-          <img src="Temps1.jpeg" alt="Temps 1">
-          <img src="Temps2.jpeg" alt="Temps 2">
-          <img src="Temps3.jpeg" alt="Temps 3">
-          <img src="Temps4.jpeg" alt="Temps 4">
-        </div>
+        <div class="w3-card w3-white w3-margin w3-padding">
+            <h4><b>Proyecto 4: App del tiempo</b></h4>
+            <div class="project-images">
+              <img src="Temps1.jpeg" alt="Temps 1" onclick="openModal(this)">
+              <img src="Temps2.jpeg" alt="Temps 2" onclick="openModal(this)">
+              <img src="Temps3.jpeg" alt="Temps 3" onclick="openModal(this)">
+              <img src="Temps4.jpeg" alt="Temps 4" onclick="openModal(this)">
+            </div>
         <p>App que te muestra el clima y la temperatura de tu ciudad o de la ciudad que prefieras.</p>
         <p><i>Fecha inicio: 02/12/2024 - Fecha fin: 10/01/2025</i></p>
       </div>
@@ -144,12 +188,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 5: App productos alimentarios</b></h4>
         <div class="project-images">
-          <img src="Nutri1.jpeg" alt="Nutri 1">
-          <img src="Nutri2.jpeg" alt="Nutri 2">
-          <img src="Nutri3.jpeg" alt="Nutri 3">
-          <img src="Nutri4.jpeg" alt="Nutri 4">
-          <img src="Nutri5.jpeg" alt="Nutri 5">
-          <img src="Nutri6.jpeg" alt="Nutri 6">
+          <img src="Nutri1.jpeg" alt="Nutri 1" onclick="openModal(this)">
+          <img src="Nutri2.jpeg" alt="Nutri 2" onclick="openModal(this)">
+          <img src="Nutri3.jpeg" alt="Nutri 3" onclick="openModal(this)">
+          <img src="Nutri4.jpeg" alt="Nutri 4" onclick="openModal(this)">
+          <img src="Nutri5.jpeg" alt="Nutri 5" onclick="openModal(this)">
+          <img src="Nutri6.jpeg" alt="Nutri 6" onclick="openModal(this)">
         </div>
         <p>App para escanear o escribir los códigos de barras de los productos alimentarios y obtener la información nutricional de estos productos.</p>
         <p><i>Fecha inicio: 13/01/2025 - Fecha fin: 07/02/2025</i></p>
@@ -189,6 +233,24 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </div>
 
 <script>
+
+    // Función para abrir el modal
+function openModal(img) {
+  document.getElementById("expandedImg").src = img.src;
+  document.getElementById("imageModal").style.display = "block";
+}
+
+// Función para cerrar el modal
+function closeModal() {
+  document.getElementById("imageModal").style.display = "none";
+}
+
+// Cerrar al hacer click fuera de la imagen
+window.onclick = function(event) {
+  if (event.target == document.getElementById('imageModal')) {
+    closeModal();
+  }
+}
 // Script to open and close sidebar
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
@@ -208,9 +270,6 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 </script>
-
-</body>
-</html>
 
 </body>
 </html>
