--- a/Portafolios.html
+++ b/Portafolios.html
@@ -6,68 +6,83 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-    body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-    .w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
-    .w3-third img:hover{opacity: 1}
-    .project-images {
-      display: flex;
-      gap: 8px;
-      overflow-x: auto;
-      padding: 10px 0;
-      margin-bottom: 15px;
-    }
-    .project-images img {
-      width: 150px;
-      height: auto;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-    .project-images img:hover {
-      transform: scale(1.05);
-    }
-    /* Estilos para el modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      padding-top: 50px;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.9);
-    }
-    .modal-content {
-      margin: auto;
-      display: block;
-      max-width: 90%;
-      max-height: 90%;
-    }
-    .close {
-      position: absolute;
-      top: 15px;
-      right: 35px;
-      color: #fff;
-      font-size: 40px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    </style>
+body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+.w3-third img{margin-bottom: -6px; opacity: 0.8; cursor: pointer}
+.w3-third img:hover{opacity: 1}
+.project-images {
+  display: flex;
+  gap: 8px;
+  overflow-x: auto;
+  padding: 10px 0;
+  margin-bottom: 15px;
+}
+.project-images img {
+  width: 150px;
+  height: auto;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+.project-images img:hover {
+  transform: scale(1.05);
+}
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  padding-top: 50px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.9);
+}
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+}
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.nav-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 16px;
+  user-select: none;
+}
+.nav-arrow.left {
+  left: 20px;
+}
+.nav-arrow.right {
+  right: 20px;
+}
+.nav-arrow:hover {
+  color: #ccc;
+}
+</style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
-    <!-- Modal para imágenes grandes -->
+<!-- Modal para imágenes grandes -->
 <div id="imageModal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <span class="nav-arrow left" onclick="prevImage()">&#10094;</span>
-    <span class="nav-arrow right" onclick="nextImage()">&#10095;</span>
-    <img class="modal-content" id="expandedImg">
-  </div>
-
-    <div id="imageModal" class="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <img class="modal-content" id="expandedImg">
-      </div>
+  <span class="close" onclick="closeModal()">&times;</span>
+  <span class="nav-arrow left" onclick="prevImage()">&#10094;</span>
+  <span class="nav-arrow right" onclick="nextImage()">&#10095;</span>
+  <img class="modal-content" id="expandedImg">
+</div>
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
@@ -179,15 +194,14 @@
         <p><i>Fecha inicio: 28/10/2024 - Fecha fin: 29/11/2024</i></p>
       </div>
 
-      
-        <div class="w3-card w3-white w3-margin w3-padding">
-            <h4><b>Proyecto 4: App del tiempo</b></h4>
-            <div class="project-images">
-              <img src="Temps1.jpeg" alt="Temps 1" onclick="openModal(this)">
-              <img src="Temps2.jpeg" alt="Temps 2" onclick="openModal(this)">
-              <img src="Temps3.jpeg" alt="Temps 3" onclick="openModal(this)">
-              <img src="Temps4.jpeg" alt="Temps 4" onclick="openModal(this)">
-            </div>
+      <div class="w3-card w3-white w3-margin w3-padding">
+        <h4><b>Proyecto 4: App del tiempo</b></h4>
+        <div class="project-images">
+          <img src="Temps1.jpeg" alt="Temps 1" onclick="openModal(this)">
+          <img src="Temps2.jpeg" alt="Temps 2" onclick="openModal(this)">
+          <img src="Temps3.jpeg" alt="Temps 3" onclick="openModal(this)">
+          <img src="Temps4.jpeg" alt="Temps 4" onclick="openModal(this)">
+        </div>
         <p>App que te muestra el clima y la temperatura de tu ciudad o de la ciudad que prefieras.</p>
         <p><i>Fecha inicio: 02/12/2024 - Fecha fin: 10/01/2025</i></p>
       </div>
@@ -240,7 +254,6 @@
 </div>
 
 <script>
-
 // Variables globales para la navegación
 let currentImageIndex = 0;
 let images = [];
@@ -278,23 +291,7 @@ window.onclick = function(event) {
     closeModal();
   }
 }
-    // Función para abrir el modal
-function openModal(img) {
-  document.getElementById("expandedImg").src = img.src;
-  document.getElementById("imageModal").style.display = "block";
-}
 
-// Función para cerrar el modal
-function closeModal() {
-  document.getElementById("imageModal").style.display = "none";
-}
-
-// Cerrar al hacer click fuera de la imagen
-window.onclick = function(event) {
-  if (event.target == document.getElementById('imageModal')) {
-    closeModal();
-  }
-}
 // Script to open and close sidebar
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
@@ -305,15 +302,9 @@ function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
   document.getElementById("myOverlay").style.display = "none";
 }
-
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
 </script>
 
+</body>
+</html>
 </body>
 </html>
