--- a/Portafolios.html
+++ b/Portafolios.html
@@ -191,7 +191,22 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
       <div class="w3-card w3-white w3-margin w3-padding">
         <h4><b>Proyecto 3: Lista de la compra</b></h4>
-        <p>Pendiente.</p>
+        <a href="https://github.com/DanielRiveraMontero/Lista-de-la-compra">Descargar apk</a>
+        <div class="project-images">
+          <img src="compra.jpeg" alt="compra 1" onclick="openModal(this)">
+          <img src="compra2.jpeg" alt="compra 2" onclick="openModal(this)">
+          <img src="compra3.jpeg" alt="compra 3" onclick="openModal(this)">
+          <img src="compra4.jpeg" alt="compra 4" onclick="openModal(this)">
+          <img src="compra5.jpeg" alt="compra 5" onclick="openModal(this)">
+          <img src="compra6.jpeg" alt="compra 6" onclick="openModal(this)">
+          <img src="compra7.jpeg" alt="compra 7" onclick="openModal(this)">
+          <img src="compra8.jpeg" alt="compra 8" onclick="openModal(this)">
+          <img src="compra9.jpeg" alt="compra 9" onclick="openModal(this)">
+          <img src="compra10.jpeg" alt="compra 10" onclick="openModal(this)">
+          <img src="compra11.jpeg" alt="compra 11" onclick="openModal(this)">
+          <img src="compra12.jpeg" alt="compra 12" onclick="openModal(this)">
+        </div>
+        <p>Aplicación para crear una lista de la compra personalizada en la que varias personas pueden colaborar.</p>
         <p><i>Fecha inicio: 28/10/2024 - Fecha fin: 29/11/2024</i></p>
       </div>
 
